objects/Activity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Lead_Not_Active__c</fullName>
        <label>Lead - Not Active</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>something different</description>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <label>Account Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Github__c</fullName>
        <label>Github</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Client__c</fullName>
        <description>something new</description>
        <label>Email Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number_2__c</fullName>
        <description>a new description</description>
        <label>Account Number #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Git_Repository__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Git Repository?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Enablement_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Enablement Tool?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>the preferred email of the prospect</description>
        <label>Preferred Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>something different</description>
        <label>Ownership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <description>a new description</description>
        <label>VIP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Sales_Reps__c</fullName>
        <description>number of sales reps</description>
        <label>No. of Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>NEW DESCRIPTION</description>
        <label>Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Last_Active__c</fullName>
        <label>Lead - Last Active</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>the shipping address of the company.</description>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website_2__c</fullName>
        <label>Company Website #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>A count of employees</description>
        <label>Employee Count</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>prospect contact info</description>
        <label>Preferred Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <description>The owner of this account</description>
        <label>Account Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <description>a new addition</description>
        <label>Company Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>the different assets we support</description>
        <label>Asset Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead - Last Active</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>